# veritas-platform

./: README.md  app.py  pyproject.toml  requirements.txt
pages/: 1_Data_Ingestion_Gateway.py  1_QC_Center.py  2_Process_Capability.py  2_QC_and_Integrity_Center.py  3_Process_Capability_Dashboard.py  3_Stability_Dashboard.py  4_Regulatory_Support.py  4_Stability_Program_Dashboard.p  5_Deviation_Hub.py  5_Regulatory_Support.py  6_Deviation_Hub.py  6_Governance_Hub.py  7_Governance_Hub.py  cess_Capability_Dashboard.py
src/veritas/: config.py  repository.py  session_manager.py
src/veritas/engine/: analytics.py  plotting.py  reporting.py
src/veritas/ui/: auth.py  utils.py
tests/: conftest.py  test_analytics.py
