# pyproject.toml

[project]
name = "veritas"
version = "1.0.0"
description = "VERITAS GxP-compliant data analytics platform."
dependencies = [
    "streamlit >= 1.28.0",
    "pandas >= 2.0.0",
    "numpy >= 1.24.0",
    "plotly >= 5.15.0",
    "scipy >= 1.10.0",
    "statsmodels >= 0.14.0",
    "scikit-learn >= 1.3.0",
    "graphviz >= 0.20.0",
    "fpdf2 >= 2.7.0",
    "python-pptx >= 0.6.23",
    "pyarrow >= 14.0.0",
    "kaleido >= 0.2.1", # For static image export from Plotly
]

[project.optional-dependencies]
test = [
    "pytest >= 7.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
